@@ -14,11 +14,3 @@ Creating a SVGZ reader
 
 </para>
 
-<!-- ##### FUNCTION rsvg_handle_new_gz ##### -->
-<para>
-
-</para>
-
-@Returns: 
-
-
